--- a/app.json
+++ b/app.json
@@ -16,8 +16,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/AM-ROBOTS/AM-ROBOTS",
-    "repository": "https://github.com/AM-ROBOTS/AM-ROBOTS",
+    "website": "https://github.com/ankitpatel40/apz-shortner-filter-bot",
+    "repository": "https://github.com/ankitpatel40/apz-shortner-filter-bot",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
@@ -65,7 +65,7 @@
         },
         "COLLECTION_NAME": {
             "description": "Name of the collections. Defaults to Telegram_files. If you are using the same database, then use different collection name for each bot",
-            "value": "Anurag_files",
+            "value": "apz_files",
             "required": false
         }
     },
